# ashera

./: CMakeLists.txt  LICENSE.md  README.md  flags
include/ashera/: algorithm.hpp  configs.hpp  engine.hpp  io.hpp  thread_pool.hpp
src/: main.cxx
src/ashera/: algorithm.cxx  configs.cxx  engine.cxx  io.cxx  thread_pool.cxx
src/ashera/detail/: assembly.cxx  assembly.hpp  mapping_algo.cxx  mapping_algo.hpp  overlap.cxx  overlap.hpp  polish.cxx  polish.hpp  snp_filter.cxx  snp_filter.hpp
test/: CMakeLists.txt  main.cxx
test/data/: small.fasta  small.fastq
